src/test/resources/tokens/invalid/double_missing_exp_value_after_sign.unpick
unpick v3
const double
    1.0e- = 0